# mymuduo-http

./: .gitignore  Acceptor.cc  Acceptor.h  Buffer.cc  Buffer.h  CLAUDE.md  CMakeLists.txt  Callbacks.h  CurrentThread.cc  DefaultPoller.cc  EventLoop.h  EventLoopThread.cc  EventLoopThreadPool.cc  InetAddress.cc  InetAddress.h  Poller.cc  Poller.h  README.md  Socket.cc  Socket.h  TcpConnectiong.cc  TcpServer.h  Thread.cc  Thread.h  Timestamp.cc  Timestamp.h  logger.cc  run_tests.sh
benchmark/: BENCHMARK_REPORT.md  benchmark.py  benchmark_client.cpp  report.md  run_benchmark.sh  run_full_benchmark.sh
benchmark/perf/: baseline-20260428-001010-before-tcpnodelay.md  baseline-20260428-001310-after-tcpnodelay.md  baseline-20260428-001946-after-keepalive-tune.md  baseline-20260428-003312-after-writev-final.md  baseline-20260428-005107-after-sendfile.md  baseline-20260428-005707-after-buffer-prealloc.md  baseline.sh  bench_ws_encode.cpp
build_test/: CMakeCache.txt  Makefile  cmake_install.cmake  full_server  http_server  rpc.pb.cc  rpc.pb.h  rpc_client  rpc_client_pb  rpc_server  rpc_server_pb
config/: server.conf
docs/: ARCHITECTURE.md  CPP17_FEATURES.md  CPP_INTERVIEW_GUIDE.md  CPP_NEW_FEATURES.md  DESIGN_PRINCIPLES.md  INTERVIEW.md  MODULES.md  NETWORK_IO.md  QUICKSTART.md  RESUME.md  TECHNICAL_DETAILS.md  WEB_PROTOCOL_GUIDE.md
docs/benchmark/: BENCHMARK_REPORT.md
docs/plans/: 2026-04-11-improvement-and-muduo-im-design.md  2026-04-11-phase1-first-tier-improvements.md  2026-04-11-phase2-second-tier-improvements.md  2026-04-26-network-perf-optimization.md
examples/: full_server.cpp  http_server.cpp  registry_server.cpp  rpc_client.cpp  rpc_client_pb.cpp  rpc_server.cpp  rpc_server_pb.cpp  websocket_server.cpp
src/asynclogger/: AsyncLogger.h
src/balancer/: LoadBalancer.h
src/config/: Config.h
src/http/: GzipMiddleware.h  HttpClient.h  HttpCore.h  HttpRequest.h  HttpResponse.h  HttpServer.h  HttpsServer.h  MultipartParser.h  SslContext.h
src/net/: Acceptor.cc  Buffer.cc  Buffer.h  Channel.cc  Channel.h  Connector.cc  Connector.h  CurrentThread.h  DefaultPoller.cc  EPollPoller.cc  EPollPoller.h  EventLoop.cc  EventLoop.h  EventLoopThread.h  EventLoopThreadPool.cc  EventLoopThreadPool.h  InetAddress.cc  Socket.cc  Socket.h  TcpClient.cc  TcpClient.h  TcpConnection.cc  TcpConnection.h  TcpServer.cc  TcpServer.h  TimerId.h  logger.h  noncopyable.h
src/pool/: ConnectionPool.h  MySQLPool.h  RedisPool.h
src/registry/: HealthChecker.h  RegistryClient.h  RegistryServer.h  ServiceCatalog.h  ServiceMeta.h
src/rpc/: RpcClient.h  RpcClientPb.h  RpcServer.h  RpcServerPb.h
src/rpc/proto/: rpc.proto
src/timer/: Timer.h  TimerQueue.h
src/util/: CircuitBreaker.h  EtcdClient.h  KafkaConsumer.h  KafkaProducer.h  Metrics.h  ObjectPool.h  RateLimiter.h  Redlock.h  SignalHandler.h  Snowflake.h  ThreadPool.h
src/websocket/: WebSocketClient.h  WebSocketFrame.h  WebSocketServer.h  WsSession.h
tests/: test_buffer.cpp  test_channel.cpp  test_chunked.cpp  test_circuit_breaker.cpp  test_config.cpp  test_connector.cpp  test_etcd_client.cpp  test_eventloop.cpp  test_graceful_shutdown.cpp  test_gzip.cpp  test_http.cpp  test_http_client.cpp  test_https.cpp  test_kafka_producer_consumer.cpp  test_load_balancer.cpp  test_metrics.cpp  test_multipart.cpp  test_mysql_pool.cpp  test_object_pool.cpp  test_rate_limiter.cpp  test_redis_pool.cpp  test_redis_sentinel.cpp  test_redlock.cpp  test_registry.cpp  test_snowflake.cpp  test_tcp_connection.cpp  test_tcp_server_client.cpp  test_thread_pool.cpp  test_timer.cpp  test_websocket_client.cpp  test_websocket_frame.cpp  test_websocket_server.cpp
